# rec-schemes

./: CHANGELOG.md  Main.hs  README.md  rec-schemes.cabal
app/: Ackermann.hs  BirdTree.hs  Factorial.hs  Fibonacci.hs  Knapsack.hs  LCS.hs  LIS.hs  List.hs  Main.hs  QuickSort.hs  RecNat.hs  RecSchemes.hs  Reverse.hs  Streams.hs
