cabal-version:      2.4
name:               rec-schemes
version:            0.1.0.0
synopsis:           Programming algorithms using recursion schemes

-- A longer description of the package.
-- description:
homepage:           https://mpaviotti.github.io

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Marco Paviotti
maintainer:         marco.paviotti@gmail.com

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files:
    CHANGELOG.md
    README.md

executable rec-schemes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    array >= 0.5.4.0,
                      base ^>=4.15.0.0,
                      comonad >= 5.0.8,
                      fin >= 0.2,
                      fin >= 0.2.1

    hs-source-dirs:   app
    default-language: Haskell2010
